# ecewo-benchmarks

./: .gitignore  README.md  benchmark.js
frameworks/axum/: Cargo.toml  README.md
frameworks/axum/src/: main.rs  server.rs
frameworks/ecewo/: CMakeLists.txt  README.md  ecewo-cluster.c  ecewo-cluster.h  main.c
frameworks/ecewo/src/: main.c
frameworks/express/: README.md  cluster.mjs  package-lock.json  package.json  server.js
frameworks/fastify/: package-lock.json  package.json  server.js
frameworks/go/: README.md  main.go
frameworks/hono/: package-lock.json  package.json  server.js
results/: axum.txt  ecewo.txt  express.txt  fastify.txt  go.txt  hono.txt
