[package]
name = "axum-hello-world"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.5", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"] }
serde = { version = "1", features = ["derive"] }

[profile.release]
opt-level       = 3
lto             = true
codegen-units   = 1