[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", default-features = false, features = ["json", "http1", "tokio"] }
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
hyper = { version = "1.8.1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.7", features = ["set-header"] }
socket2 = "0.6.1"
num_cpus = "1.17"

[profile.release]
opt-level       = 3
lto             = "fat"
codegen-units   = 1
panic           = "abort"
strip           = true